# claudeboss

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/claudeboss/: __init__.py  __main__.py  active_detector.py  activity.py  app.py  detail.py  detector.py  session.py  summarizer.py  ui.py
