[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudeboss"
version = "0.1.0"
description = "Terminal UI for browsing and managing Claude Code sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Andrew Medworth" }
]
keywords = ["claude", "cli", "tui", "ncurses", "session", "browser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/anthropics/claudeboss"
Repository = "https://github.com/anthropics/claudeboss"

[project.scripts]
claudeboss = "claudeboss:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claudeboss"]
